# ms-py-agent

./: .env.example  .gitignore  Dockerfile  README.md  main.py  nacos-config-example.yaml  pyproject.toml  requirements.txt  run.py
.agent/rules/: CODING_STANDARDS.md  ai-code-ws.md
.github/workflows/: docker-build.yml  test.yml
app/agent/: factory.py  state.py
app/api/routers/: chat.py  kb.py
app/core/: config.py  database.py  dynamic_config.py  lifecycle.py  llm_factory.py  mcp_initialization.py  nacos.py  security.py
app/domain/: __init__.py  models.py
app/services/: chat_graph.py  mcp_client.py
app/services/kb/: __init__.py  data_prep.py  generation.py  indexing.py  retrieval.py
scratch/: nacos_debug.py
scripts/: ingest_how_to_cook.py
tests/: conftest.py  test_architecture.py  test_graph_routing.py  test_mcp_client_unit.py  test_security.py
